# RetailSense

./: .dockerignore  .gitignore  .replit  DEPLOY.md  Dockerfile  IMAGENES_GUIA.md  OPENAI_SETUP.md  README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: Pasted--Camisas-y-Top-Predicci-n-modelo-3844-unidades-Promedio-hist-rico-3885-unidades--1762783097244_1762783097245.txt  Pasted-1-Qu-quiero-que-haga-la-parte-de-forecasting-KLOB-debe-tener-un-m-dulo-de-forecasting-autom-tico-e-1762538749505_1762538749505.txt  Pasted-Genial-vamos-a-dejarlo-TODO-en-un-solo-prompt-para-que-puedas-copiar-pegar-en-Cursor-y-que-te-monte-1762770196586_1762770196587.txt  Pasted-Vale-esto-que-te-dice-Cursor-tiene-sentido-en-parte-pero-hay-que-colocarlo-en-contexto-y-decidir-q-1762770981643_1762770981643.txt  Pasted-You-are-an-expert-full-stack-and-AI-engineer-Build-the-complete-Sentiment-Analysis-module-for--1762782853429_1762782853430.txt  Pasted-Your-app-idea-is-a-SaaS-style-analytics-and-prediction-platform-for-retail-brands-and-SMEs-The-core-1762013415397_1762013415397.txt  README_1762013990364.md  app_correct.py  dashboard_1762013990364.py  datos_descripciones_1762014900552.xlsx
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
client/: index.html
client/src/: App.tsx  (+1 more)
forecasting_engine/: __init__.py  main.py  plan_compras.py  prediction.py  preprocessing.py  training.py
server/: db.ts  index.ts  routes.ts  storage.ts
shared/: schema.ts
(+84 files in other folders)
